compiler/src/test/resources/amyc/parser/failing/ValAsOperand.grading.amy
object Val
  1 + val x: Int(32) = 42; x
end Val
